# infectio

./: .gitignore  README.md
infectiowasm/: .gitignore  Cargo.toml
infectiowasm/scripts/: dev.sh
infectiowasm/src/: dispatcher.rs  lib.rs
infectiowasm/src/analyzers/: analyzer_report.rs  analyzer_trait.rs  elf_analyzer.rs  mach_analyzer.rs  mod.rs  ole_analyzer.rs  openxml_analyzer.rs  pdf_analyzer.rs  pe_analyzer.rs  zip_analyzer.rs
infectiowasm/src/utils/: entropy.rs  hashes.rs  strings.rs  zip.rs
infectiowasm/tests/: dispatcher.rs
infectiowasm/tests/utils/: entropy.rs  hashes.rs  mod.rs  strings.rs  zip.rs
web/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
web/public/: index.html
web/src/: index.css  index.tsx
web/src/components/: Accordion.tsx  Chat.tsx  CodeAnalysis.tsx  CodeBlock.tsx  FileInfo.tsx  FileInputDropZone.tsx  FolderTree.tsx  Heuristics.tsx  Imports.tsx  ImportsGraph.tsx  InfoBanner.tsx  Ips.tsx  LineChart.tsx  Logo.tsx  Metadata.tsx  Modal.tsx  Strings.tsx  Table.tsx  Tabs.tsx  Urls.tsx
web/src/contexts/: useLLM.tsx
web/src/hooks/: useDragAndDrop.ts
web/src/pages/: home.tsx  learnMore.tsx
web/src/types/: types.ts
web/src/utils/: content-types.ts  display.tsx
web/src/workers/: worker.ts
